test/Fail/SmartWithUIP.err
SmartWithUIP.agda:28.1-27: warning: -W[no]RewriteLHSReduces
_ : hide ⟨⟩ x ≡ x  is not a legal rewrite rule, since the left-hand
side
  hide ⟨⟩ x
reduces to
  x
when checking that the pattern refl has type u ≡ ⟨⟩

SmartWithUIP.agda:28.1-29.36: warning: -W[no]SmartWithOccursFail
_ : u ≡ w  is not a legal rewrite rule, since the LHS occurs in the
RHS or an earlier 'smart with' rewrite rule
when checking that the clause
SmartWithUIP.-rewrite58 {_} {x = x} u eq _ refl rewrite unitp u
  = refl
has type
{x.A : Set} {x : x.A} (u : Unit) (eq : hide u x ≡ x) (w : x.A)
{@rewrite w-eq : hide u x ≡ w} (prf : hide u x ≡ x)
{@rewrite prf-eq : eq ≡ prf} →
PathOver (λ v → hide v x ≡ x) (unitp u) eq refl

SmartWithUIP.agda:28.1-27: error: [InvalidatedLocalRewriteRule]
Local rewrite rule invalidated after a pattern-match
when checking that the pattern refl has type u ≡ ⟨⟩
